Fixed card alignment to start

--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -31,6 +31,12 @@
     }
 }
 
+.card-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 .book-card .heading-text {
     text-align: center;
     margin-bottom: 1rem;
